tests/cases/fail/list_bool_literal_mixed.p4
def main() -> None:
    xs: list[bool] = [True, 1]
